# smart-actions-gui

./: README.md
src/: ai_reply_text.js  audio_to_text.js  cockpit.html  cockpit.js  dictate_text.js  index.html  main.js  styles.css  text_to_speech.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: config.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  domain.rs  lib.rs  main.rs  menu_action_state_manager.rs
src-tauri/src/commands/: mod.rs  ui_notify_change_action.rs  ui_notify_change_element_in_action.rs  ui_notify_startup.rs  ui_request_execute_action.rs  ui_request_stop_action.rs
src-tauri/src/domain/: action.rs  action_config.rs  actions_metadata.rs  app_config.rs  app_state.rs  audio.rs  constants.rs  language.rs  mod.rs  mouse_cursor_icon.rs  smart_action.rs  startup_ui_metadata.rs
src-tauri/src/logic/: action_config_parser.rs  audio_player_manager.rs  config_manager.rs  language_manager.rs  menu_action_state_manager.rs  menu_manager.rs  mod.rs  smart_action_manager.rs  smart_action_manager_new.rs  smart_action_state_manager.rs  tray_icon_manager.rs
src/assets/: a.json  actions.json
src/components/: editable_select_component.js
