[package]
name = "smart-actions-gui"
version = "1.0.0"
description = "A GUI for executing smart actions"
authors = ["Matteo Veroni"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "smart_actions_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }
[dependencies]
tauri = { version = "2.7.0", features = [
    'tray-icon',
    'image-ico',
    'image-png',
] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
indexmap = { version = "2.10.0", features = ["serde"] }
sys-locale = "0.3.2"
tauri-plugin-store = "2.3.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
